# TrueNorth

./: .gitignore  README.md  docker-compose.yml
docs/: 00-master-plan.md  00-shared-specification.md  01-work-unit-roster.md
docs/architecture/: L1-system-context.md  L2-containers.md  L3-components.md  L4-data-and-apis.md
docs/delivery/: responsible-ai-deep-dive.md  roadmap-and-delivery.md
docs/features/: data-and-knowledge.md  decision-and-simulation.md  governance-responsible-ai.md  meetings-and-alignment.md  platform-and-adoption.md  security-trust.md  surfaces-and-workbench-framework.md
docs/perspectives/: cfo-finance.md  (+13 more)
engine/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
engine/docker/: entrypoint.sh
engine/migrations/: env.py
engine/migrations/versions/: 0001_initial.py
engine/tests/: test_api.py  test_auth.py  test_eval.py  test_evidence.py  test_migrations.py  test_review.py  test_schemas.py  test_store.py  test_telemetry.py
engine/truenorth_engine/: __init__.py  api.py  cli.py  config.py  lenses.py  model_gateway.py  pipeline.py  review.py  schemas.py  telemetry.py
engine/truenorth_engine/auth/: __init__.py  admin_cli.py  deps.py  keys.py  models.py  rbac.py
engine/truenorth_engine/eval/: __init__.py  __main__.py  fakes.py  golden.py  grader.py  runner.py
engine/truenorth_engine/evidence/: __init__.py  base.py  discount.py  github.py
engine/truenorth_engine/store/: __init__.py  audit.py  db.py  models.py  repository.py
web/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
(+60 files in other folders)
