[project]
name = "truenorth-engine"
version = "0.1.0"
description = "TrueNorth decision-intelligence engine: judges a proposed decision and returns a governed recommendation."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.69",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
truenorth = "truenorth_engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["truenorth_engine"]

[tool.ruff]
line-length = 100
target-version = "py312"
